upcoming..

* Mocking now works on classes that has atleast one non-private constructor that doesn't throw an exception
* Added support for @Mock and @Spy annotations

----------------------
- Version 0.2.0
----------------------
* Added support for stubbing / verifying: equals, hashCode, toString
* Implemented a default answer for deep mocks
* Added MockPoint and between-operator.
* Implemented quick mocks (does not store stacktrace)
* Added mock settings
* Added support for mocking multiple interfaces on the same mock
* eq-matcher now supports comparing arrays by value (including nested arrays)
----------------------
- Version 0.1.0
----------------------
First release.
