@@ -2,6 +2,7 @@ upcoming..
 
 * Mocking now works on classes that has atleast one non-private constructor that doesn't throw an exception
 * Added support for @Mock and @Spy annotations
+* Included optional support for Objenesis, which means support for mocking concrete classes without calling constructors
 
 ----------------------
 - Version 0.2.0
